[project]
name = "AutoEncore"
version = "1"
authors = [{ name = "SnackBreak" }]
description = "Automatically uses nearby Boss Replay machines."

[tool.sdkmod]
name = "Auto Encore"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"
coop_support = "ClientSide"
