[project]
name = "DebugAssist"
version = "1"
authors = [{ name = "FreepDryer" }]
description = "Contains a debug assisting function"

[tool.sdkmod]
name = "Debug Assister"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/FreepDryer/freepdryer-bl4-sdk-mods/tree/main/debug_assistance/debug_assistance.sdk"
version = "1"
coop_support = "HostOnly"