[project]
name = "Junk Seller"
version = "1"
authors = [{ name = "FreepDryer" }]
description = "Sell that junk! WARNING - Items are not recoverable after selling!"

[tool.sdkmod]
name = "Junk Seller"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/FreepDryer/freepdryer-bl4-sdk-mods/raw/refs/heads/main/junkSeller/junkSeller.sdkmod"
version = "1"
coop_support = "Unknown"