[project]
name = "Trash Seller"
version = "1"
authors = [{ name = "FreepDryer" }]
description = "Sell that Trash! WARNING - Items are not recoverable after selling!"

[tool.sdkmod]
name = "Trash Seller"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/FreepDryer/freepdryer-bl4-sdk-mods/raw/refs/heads/main/trashSeller/trashSeller.sdkmod"
version = "1"
coop_support = "Unknown"